@@ -1,3 +1,8 @@
+Tue Oct 19 09:44:45 UTC 2010  Olli Savia  <ops@iki.fi>
+
+        * ace/Caching_Utility_T.cpp:
+          Use ACE::is_equal() to compare floating point values.
+
 Fri Oct 15 10:18:05 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/Bug_3911_Regression_Test.cpp:
